--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.4.5'
+    id 'org.springframework.boot' version '3.5.0'
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -22,7 +22,7 @@ dependencies {
     implementation 'org.postgresql:postgresql'
     implementation 'org.flywaydb:flyway-database-postgresql'
     implementation 'io.micrometer:micrometer-registry-prometheus'
-    implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'
+    implementation 'org.mindrot:jbcrypt:0.4'
     implementation 'com.auth0:java-jwt:4.5.0'
 }
 
